--- a/board/src/main/webapp/WEB-INF/web.xml
+++ b/board/src/main/webapp/WEB-INF/web.xml
@@ -52,5 +52,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 문자 인코딩 끝 -->
+	
+	<!-- 오라클 jdbc 연동 -->
+<!-- 	<resource-ref>
+    <description>Connection</description>
+    <res-ref-name>jdbc/OracleDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref> -->
+  	<!-- 오라클 jdbc 연동 -->
+
+
 
 </web-app>
